[project]
name = "tensorbox"
version = "0.0.1"
description = "Type annotations and runtime checking for dataclass-like containers of tensors."
readme = "README.md"
requires-python ="~=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "David Charatan", email = "charatan@mit.edu"},
]
keywords = ["pytorch", "neural-networks", "deep-learning", "typing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
urls = {repository = "https://github.com/dcharatan/tensorbox" }
dependencies = ["numpy>=1.20.0", "jaxtyping>=0.2.28", "torch>=2.0.0", "beartype>=0.17.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["tensorbox/*"]

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "I"]
ignore = ["F722"] # Ignore F722 for jaxtyping compatibility.

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
